--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,5 +1,7 @@
 <ion-tabs>
-  <ion-tab [root]="tab1Root" tabTitle="Feed" tabIcon="Feed"></ion-tab>
-  <ion-tab [root]="tab2Root" tabTitle="About" tabIcon="information-circle"></ion-tab>
-  <ion-tab [root]="tab3Root" tabTitle="Contact" tabIcon="contacts"></ion-tab>
+  <ion-tab [root]="tab1Root" tabTitle="Home" tabIcon="home"></ion-tab>
+  <ion-tab [root]="tab2Root" tabTitle="User Upload" tabIcon="apps"></ion-tab>
+  <ion-tab [root]="tab3Root" tabTitle="Profile" tabIcon="person"></ion-tab>
+  <ion-tab [root]="tab4Root" tabTitle="Notifications" tabIcon="notifications"></ion-tab>
+  <ion-tab [root]="tab5Root" tabTitle="Explore" tabIcon="search"></ion-tab>
 </ion-tabs>
