--- a/src/pages/explore/explore.html
+++ b/src/pages/explore/explore.html
@@ -7,11 +7,7 @@
 <ion-header>
 
   <ion-navbar>
-<<<<<<< HEAD
-    <ion-title>Explore</ion-title>
-=======
     <ion-title>Explore Page</ion-title>
->>>>>>> mbarigala
   </ion-navbar>
 
 </ion-header>
@@ -29,7 +25,9 @@
 
 =======
 
+<!--sssss-->
 
+  
     <ion-searchbar
     [(ngModel)]="myInput"
     [showCancelButton]="shouldShowCancel"
