--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -4,6 +4,8 @@
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
+
+<!--Shalu-->
 <ion-header>
   <ion-navbar>
       <ion-buttons start>
