--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -58,7 +58,7 @@
             <ion-avatar item-start>
               <img src="assets/imgs/r1.png">
             </ion-avatar>
-            <h2>Raghav lila</h2>
+            <h2>Raghav Lila</h2> <!--name of the person!-->
           </ion-item>
         
           <img src="assets/imgs/r2.png">
