--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -22,4 +22,6 @@
 
 <ion-content padding>
     <img width="100" height="150" src="assets/imgs/user-downloadfemale-user-icon.png" alt="Sarah Knight">
-</ion-content>
+</ion-content
+
+><!--sahil-->
