--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -19,7 +19,7 @@
       </ion-buttons>
   </ion-navbar>
 </ion-header>
-
+<!--insert image-->
 <ion-content padding>
     <img width="100" height="150" src="assets/imgs/user-downloadfemale-user-icon.png" alt="Sarah Knight">
 </ion-content>
