--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -14,5 +14,7 @@
 
 
 <ion-content padding>
-
+  <!--Settings ID: {{settingsId}}-->
+ <button ion-button full(click)="goBack()">
+   Back</button>
 </ion-content>
