--- a/src/pages/user-uploads/user-uploads.html
+++ b/src/pages/user-uploads/user-uploads.html
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>User Uploads</ion-title>
+    <ion-title>User Uploads</ion-title> <ion-icon name="add" (click)="openAdd()"></ion-icon>
   </ion-navbar>
 
 </ion-header>
