--- a/src/pages/edit-prof/edit-prof.html
+++ b/src/pages/edit-prof/edit-prof.html
@@ -8,6 +8,11 @@
 
   <ion-navbar>
     <ion-title>EditProf</ion-title>
+   <!-- <ion-buttons start>
+      <button ion-button icon-only color="dark" (click) = "goBack()">
+        <ion-icon name="arrow-round-back"></ion-icon>
+      </button>
+    </ion-buttons>-->
   </ion-navbar>
 
 </ion-header>
