--- a/src/pages/log-out/log-out.html
+++ b/src/pages/log-out/log-out.html
@@ -15,4 +15,16 @@
 
 <ion-content padding>
 
+    <ion-item>
+        <ion-label floating>Email Address</ion-label>
+        <ion-input type="text" [(ngModel)] = "user.email"></ion-input>
+      </ion-item>
+    
+      <ion-item>
+          <ion-label floating>Password</ion-label>
+          <ion-input type="password" [(ngModel)] = "user.password"></ion-input>
+        </ion-item>
+    
+        <button ion-button (click)="login(user)">Login</button>
+
 </ion-content>
