edit profile and logout working

--- a/src/pages/edit-prof/edit-prof.html
+++ b/src/pages/edit-prof/edit-prof.html
@@ -7,12 +7,12 @@
 <ion-header>
 
   <ion-navbar>
+      <ion-buttons start>
+          <button ion-button icon-only color="dark" (click) = "goBack()">
+            <ion-icon name="arrow-round-back"></ion-icon>
+          </button>
+        </ion-buttons>
     <ion-title>EditProf</ion-title>
-   <!-- <ion-buttons start>
-      <button ion-button icon-only color="dark" (click) = "goBack()">
-        <ion-icon name="arrow-round-back"></ion-icon>
-      </button>
-    </ion-buttons>-->
   </ion-navbar>
 
 </ion-header>
