--- a/src/pages/activity/activity.html
+++ b/src/pages/activity/activity.html
@@ -7,6 +7,11 @@
 <ion-header>
 
   <ion-navbar>
+      <ion-buttons start>
+          <button ion-button icon-only color="dark" (click) = "goBack()">
+            <ion-icon name="arrow-round-back"></ion-icon>
+          </button>
+        </ion-buttons>
     <ion-title>Activity</ion-title>
   </ion-navbar>
 
