--- a/src/pages/edit-prof/edit-prof.html
+++ b/src/pages/edit-prof/edit-prof.html
@@ -7,50 +7,50 @@
 <ion-header>
 
   <ion-navbar>
-      <ion-buttons start>
-          <button ion-button icon-only color="dark" (click) = "goBack()">
-            <ion-icon name="arrow-round-back"></ion-icon>
-          </button>
-        </ion-buttons>
-    <ion-title>EditProf</ion-title>
+    <ion-title>Edit Profile</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
-    <p>Upload Profile Picture</p>
-    <button ion-item (click) = "takePic()">
+    <p style='font-size: 120%'><ion-icon name="add-circle"></ion-icon><i>Upload Profile Picture</i></p>
+    <button ion-button icon color ='primary' clear (click) = "takePic()">
       <ion-icon name="camera"></ion-icon>
       Take Photo
     </button> 
-    <button ion-item (click) = "openGallery()">
-    <ion-icon name="folder-open" (click) = "openGallery()"></ion-icon> 
-    Library
+    <button ion-button icon color='primary' clear (click) = "openGallery()">
+      <ion-icon name="folder-open" (click) = "openGallery()"></ion-icon> 
+     Library
    </button>
 
     <p><img src = "{{image}}"> </p>
     <p><img src = "{{photo2}}"> </p>
 
+    <p style='font-size: 125%'><ion-icon name="person"></ion-icon><i>About</i></p>
     <ion-list>
       <ion-item>
-        <ion-label inline>Studied at:</ion-label>
+        <ion-label stacked>Name:</ion-label>
         <ion-input type="text"></ion-input>
       </ion-item>
       <ion-item>
-        <ion-label inline>Works at:</ion-label>
+        <ion-label stacked>Studied at:</ion-label>
         <ion-input type="text"></ion-input>
       </ion-item>
       <ion-item>
-        <ion-label inline>Lives in:</ion-label>
+        <ion-label stacked>Works at:</ion-label>
         <ion-input type="text"></ion-input>
       </ion-item>
       <ion-item>
-        <ion-label inline>From city, state:</ion-label>
+        <ion-label stacked>Lives in:</ion-label>
+        <ion-input type="text"></ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-label stacked>From city, state:</ion-label>
         <ion-input type="text"></ion-input>
       </ion-item>
     </ion-list>
 
-    <button ion-button (click)="goToUpload()" round>Save</button>
+    <button ion-button (click)="goToProfile()" round>Save</button>
 
 </ion-content>
