--- a/src/pages/edit-prof/edit-prof.html
+++ b/src/pages/edit-prof/edit-prof.html
@@ -31,26 +31,26 @@
     <ion-list>
       <ion-item>
         <ion-label stacked>Name:</ion-label>
-        <ion-input type="text"></ion-input>
+        <ion-input type="text" [(ngModel)]=name></ion-input>
       </ion-item>
       <ion-item>
         <ion-label stacked>Studied at:</ion-label>
-        <ion-input type="text"></ion-input>
+        <ion-input type="text"[(ngModel)]=study></ion-input>
       </ion-item>
       <ion-item>
         <ion-label stacked>Works at:</ion-label>
-        <ion-input type="text"></ion-input>
+        <ion-input type="text"[(ngModel)]=work></ion-input>
       </ion-item>
       <ion-item>
         <ion-label stacked>Lives in:</ion-label>
-        <ion-input type="text"></ion-input>
+        <ion-input type="text"[(ngModel)]=lives></ion-input>
       </ion-item>
       <ion-item>
         <ion-label stacked>From city, state:</ion-label>
-        <ion-input type="text"></ion-input>
+        <ion-input type="text"[(ngModel)]=fromCity></ion-input>
       </ion-item>
     </ion-list>
 
-    <button ion-button (click)="goToProfile()" round>Save</button>
+    <button ion-button (click)="createProfile(name, study, work, lives, fromCity)" round>Save</button>
 
 </ion-content>
