--- a/src/pages/user-uploads/user-uploads.html
+++ b/src/pages/user-uploads/user-uploads.html
@@ -8,24 +8,27 @@
 
   <ion-navbar>
     <ion-title>User Uploads</ion-title> <ion-icon name="add" (click)="openAdd()"></ion-icon>
+    <button ion-button (click) = "takePic()" >Take photo</button> 
   </ion-navbar>
 
 </ion-header>
 
 
+
 <ion-content padding>
+   
 
 
     <div class = "box">
         Jane Doe 
         <p>Portfolio: Seasons</p>
       </div>
-      
+
       <ion-grid>
         <ion-row>
           <ion-col col-6>
               <ion-card>
-                  <img src="assets/imgs/flower.png"/>
+                  <img src = "{{photo}}"/>
                   <ion-card-content>
                     <ion-card-title>
                       Spring
