pass data through pages

--- a/src/pages/add-art/add-art.html
+++ b/src/pages/add-art/add-art.html
@@ -44,6 +44,6 @@
       
       </ion-list>
 
-      <button ion-button (click)="goToUpload()" round>Submit</button>
+      <button ion-button (click)="upload()" round>Submit</button>
 
 </ion-content>
