--- a/src/pages/explore/explore.html
+++ b/src/pages/explore/explore.html
@@ -17,6 +17,8 @@
 
 <!--sssss-->
 
+
+
   
     <ion-searchbar
     [(ngModel)]="myInput"
@@ -32,10 +34,10 @@
         <ion-row>
           <ion-col col-4>
               <ion-card>
-                  <img src="assets/imgs/x.png"/>
+                  <img src="assets/imgs/womanInDress.png"/>
                   <ion-card-content>
                     <ion-card-title>
-                      Art Title
+                      woman in dress
                       </ion-card-title>
                     <p>
                       $49
@@ -45,10 +47,10 @@
           </ion-col>
           <ion-col col-4>
               <ion-card>
-                  <img src="assets/imgs/imgNew.png"/>
+                  <img src="assets/imgs/thinkingMan.png"/>
                   <ion-card-content>
                     <ion-card-title>
-                      Art Title
+                      thinking man
                       </ion-card-title>
                     <p>
                       $49
@@ -61,7 +63,7 @@
                 <img src="assets/imgs/img3.png"/>
                 <ion-card-content>
                   <ion-card-title>
-                    Art Title
+                    indian women
                     </ion-card-title>
                   <p>
                     $49
@@ -71,10 +73,10 @@
         </ion-col>
         <ion-col col-4>
           <ion-card>
-              <img src="assets/imgs/img4.png"/>
+              <img src="assets/imgs/hyd.png"/>
               <ion-card-content>
                 <ion-card-title>
-                  Art Title
+                  hyderabad
                   </ion-card-title>
                 <p>
                   $49
@@ -87,7 +89,7 @@
             <img src="assets/imgs/img5.png"/>
             <ion-card-content>
               <ion-card-title>
-                Art Title
+                elephant
                 </ion-card-title>
               <p>
                 $49
@@ -100,7 +102,7 @@
           <img src="assets/imgs/img6.png"/>
           <ion-card-content>
             <ion-card-title>
-              Art Title
+              canvas art
               </ion-card-title>
             <p>
               $49
@@ -113,7 +115,7 @@
         <img src="assets/imgs/img7.png"/>
         <ion-card-content>
           <ion-card-title>
-            Art Title
+            well with my soul
             </ion-card-title>
           <p>
             $49
@@ -126,7 +128,7 @@
       <img src="assets/imgs/img8.png"/>
       <ion-card-content>
         <ion-card-title>
-          Art Title
+          charminar
           </ion-card-title>
         <p>
           $49
@@ -139,7 +141,7 @@
       <img src="assets/imgs/img9.png"/>
       <ion-card-content>
         <ion-card-title>
-          Art Title
+          blue flower
           </ion-card-title>
         <p>
           $49
@@ -152,7 +154,7 @@
       <img src="assets/imgs/xx.png"/>
       <ion-card-content>
         <ion-card-title>
-          Art Title
+          inspirational
           </ion-card-title>
         <p>
           $49
@@ -165,7 +167,7 @@
       <img src="assets/imgs/img10.png"/>
       <ion-card-content>
         <ion-card-title>
-          Art Title
+          blue skies
           </ion-card-title>
         <p>
           $49
@@ -175,10 +177,10 @@
 </ion-col>
 <ion-col col-4>
   <ion-card>
-      <img src="assets/imgs/imgFinal.png"/>
+      <img src="assets/imgs/img11.png"/>
       <ion-card-content>
         <ion-card-title>
-          Art Title
+          blue water color prints
           </ion-card-title>
         <p>
           $49
@@ -186,6 +188,59 @@
       </ion-card-content>
     </ion-card>
 </ion-col>
+<ion-col col-4>
+  <ion-card>
+      <img src="assets/imgs/starry night.png"/>
+      <ion-card-content>
+        <ion-card-title>
+          starry night
+          </ion-card-title>
+        <p>
+          $49
+        </p>
+      </ion-card-content>
+    </ion-card>
+</ion-col>
+<ion-col col-4>
+  <ion-card>
+      <img src="assets/imgs/dusk.png"/>
+      <ion-card-content>
+        <ion-card-title>
+          dusk
+          </ion-card-title>
+        <p>
+          $49
+        </p>
+      </ion-card-content>
+    </ion-card>
+</ion-col>
+<ion-col col-4>
+  <ion-card>
+      <img src="assets/imgs/scream.png"/>
+      <ion-card-content>
+        <ion-card-title>
+          scream
+          </ion-card-title>
+        <p>
+          $49
+        </p>
+      </ion-card-content>
+    </ion-card>
+</ion-col>
+<ion-col col-4>
+  <ion-card>
+      <img src="assets/imgs/blue mountains.png"/>
+      <ion-card-content>
+        <ion-card-title>
+          blue mountains
+          </ion-card-title>
+        <p>
+          $49
+        </p>
+      </ion-card-content>
+    </ion-card>
+</ion-col>
+
         </ion-row>
        </ion-grid>
 
