take picture from camera, getImage() added to retrieve from firebase and display on profile

--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -23,7 +23,7 @@
 
 <ion-content padding>
  <!--<img width="100" height="150" src="assets/imgs/user-downloadfemale-user-icon.png" alt="Sarah Knight">-->
-     <img width="100" height="150" src = "{{photo}}"/>
+     <img width="100" height="150" src = "{{profilepic}}"/>
   <ion-item>
   <h2>{{(profileData | async)?.name}}</h2>
     <h4>Studied at: {{(profileData | async)?.study}}</h4>
