--- a/src/pages/edit-prof/edit-prof.html
+++ b/src/pages/edit-prof/edit-prof.html
@@ -24,7 +24,7 @@
      Library
    </button>
 
-   <p><img src = "{{profilePic}}"> </p> 
+   <p><img src = "{{photo}}"> </p> 
     <p><img src = "{{photo2}}"> </p>
 
     <p style='font-size: 125%'><ion-icon name="person"></ion-icon><i>About</i></p>
@@ -51,6 +51,6 @@
       </ion-item>
     </ion-list>
 
-    <button ion-button (click)="createProfile()" round>Save</button>
+    <button ion-button (click)="goToProfile();" round>Save</button>
 
 </ion-content>
