--- a/src/pages/edit-prof/edit-prof.html
+++ b/src/pages/edit-prof/edit-prof.html
@@ -25,7 +25,7 @@
    </button>
 
    <p><img src = "{{photo}}"> </p> 
-    <p><img src = "{{photo2}}"> </p>
+    <!--p><img src = "{{photo2}}"> </p-->
 
     <p style='font-size: 125%'><ion-icon name="person"></ion-icon><i>About</i></p>
     <ion-list>
