--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -3,5 +3,6 @@
   <ion-tab [root]="tab2Root" tabTitle="UserUploads" tabIcon="apps"></ion-tab>
   <ion-tab [root]="tab3Root" tabTitle="Profile" tabIcon="person"></ion-tab>
   <ion-tab [root]="tab4Root" tabTitle="Notifications" tabIcon="notifications"></ion-tab>
+  <ion-tab [root]="tab6Root" tabTitle="Messages" tabIcon="mail"></ion-tab>
   <ion-tab [root]="tab5Root" tabTitle="Explore" tabIcon="search"></ion-tab>
 </ion-tabs>
