--- a/src/pages/messages/messages.html
+++ b/src/pages/messages/messages.html
@@ -5,14 +5,41 @@
   Ionic pages and navigation.
 -->
 <ion-header>
-
-  <ion-navbar>
-    <ion-title>messages</ion-title>
+ 
+  <ion-navbar color="hcolor">
+    <ion-title>Messages</ion-title>
+    <ion-buttons end>
+      <button ion-button icon-only (click)="addfriend()">
+        <ion-icon name="person-add"></ion-icon>
+      </button>
+    </ion-buttons> 
   </ion-navbar>
-
+ 
 </ion-header>
-
-
+ 
+ 
 <ion-content padding>
-
+  <ion-list no-lines>
+    <ion-list-header>
+      Requests
+    </ion-list-header>
+    <ion-item-sliding *ngFor="let item of myrequests">
+      <ion-item>
+      <ion-avatar item-left>
+        <img src="">
+      </ion-avatar>
+      <h4>{{item.displayName}}</h4>
+      </ion-item>
+      <ion-item-options>
+        <button ion-button color="secondary" (click)="accept(item)">
+          <ion-icon name="checkmark"></ion-icon>
+          ADD
+        </button>
+        <button ion-button color="danger" (click)="ignore(item)">
+          <ion-icon name="trash"></ion-icon>
+          NOPE
+        </button>
+      </ion-item-options>
+    </ion-item-sliding>
+  </ion-list>
 </ion-content>
