--- a/src/pages/register/register.html
+++ b/src/pages/register/register.html
@@ -17,12 +17,17 @@
   
       <ion-item>
           <ion-label floating>Email Address</ion-label>
-          <ion-input type="text" [(ngModel)]="user.email"></ion-input>
+          <ion-input type="text" [(ngModel)]="newuser.email"></ion-input>
       </ion-item>
       
         <ion-item>
             <ion-label floating>Password</ion-label>
-            <ion-input type="password" [(ngModel)] = "user.password"></ion-input>
+            <ion-input type="password" [(ngModel)] = "newuser.password"></ion-input>
+        </ion-item>
+
+        <ion-item>
+            <ion-label foating>Name</ion-label>
+            <ion-input type="text" [(ngModel)] = "newuser.displayName"></ion-input>
         </ion-item>
   
         <button ion-button (click)="register(user)">Register</button>
