expore.html changes

--- a/src/pages/explore/explore.html
+++ b/src/pages/explore/explore.html
@@ -34,10 +34,10 @@
         <ion-row>
           <ion-col col-4>
               <ion-card>
-                  <img src="assets/imgs/womanInDress.png"/>
+                  <img src="assets/imgs/img1.png"/>
                   <ion-card-content>
                     <ion-card-title>
-                      woman in dress
+                      palm trees
                       </ion-card-title>
                     <p>
                       $49
@@ -47,7 +47,7 @@
           </ion-col>
           <ion-col col-4>
               <ion-card>
-                  <img src="assets/imgs/thinkingMan.png"/>
+                  <img src="assets/imgs/img2.png"/>
                   <ion-card-content>
                     <ion-card-title>
                       thinking man
@@ -151,7 +151,7 @@
 </ion-col>
 <ion-col col-4>
   <ion-card>
-      <img src="assets/imgs/xx.png"/>
+      <img src="assets/imgs/img10.png"/>
       <ion-card-content>
         <ion-card-title>
           inspirational
@@ -164,7 +164,7 @@
 </ion-col>
 <ion-col col-4>
   <ion-card>
-      <img src="assets/imgs/img10.png"/>
+      <img src="assets/imgs/img11.png"/>
       <ion-card-content>
         <ion-card-title>
           blue skies
@@ -177,7 +177,7 @@
 </ion-col>
 <ion-col col-4>
   <ion-card>
-      <img src="assets/imgs/img11.png"/>
+      <img src="assets/imgs/img12.png"/>
       <ion-card-content>
         <ion-card-title>
           blue water color prints
@@ -190,7 +190,7 @@
 </ion-col>
 <ion-col col-4>
   <ion-card>
-      <img src="assets/imgs/starry night.png"/>
+      <img src="assets/imgs/starrynight.png"/>
       <ion-card-content>
         <ion-card-title>
           starry night
@@ -229,10 +229,10 @@
 </ion-col>
 <ion-col col-4>
   <ion-card>
-      <img src="assets/imgs/blue mountains.png"/>
+      <img src="assets/imgs/bluemount.png"/>
       <ion-card-content>
         <ion-card-title>
-          blue mountains
+          blue mount
           </ion-card-title>
         <p>
           $49
