--- a/src/pages/user-uploads/user-uploads.html
+++ b/src/pages/user-uploads/user-uploads.html
@@ -26,7 +26,7 @@
         <ion-row>
           <ion-col col-6>
               <ion-card>
-                  <img src = "{{loadimage}}"/>
+                  <img src = "{{galleryimage}}"/>
                   <ion-card-content>
                     <ion-card-title>
                       Spring
@@ -38,36 +38,40 @@
                 </ion-card>
           </ion-col>
           <ion-col col-6>
-              <ion-card>
-                  
-                  <ion-card-content>
-                    <ion-card-title>
-                      Autumn
-                      </ion-card-title>
-                    <p>
-                      $49 <ion-icon name="heart"></ion-icon>
-                    </p>
-                  </ion-card-content>
-                </ion-card>
+            <ion-card>
+              <img src = "{{photoimage}}"/>
+              <ion-card-content>
+                <ion-card-title>
+                  Autumn
+                  </ion-card-title>
+                <p>
+                  $49 <ion-icon name="heart"></ion-icon>
+                </p>
+              </ion-card-content>
+            </ion-card>
           </ion-col>
         </ion-row>
         <ion-row>
             <ion-col col-6>
                 <ion-card>
-                    <img src="assets/imgs/winter.png"/>
                     <ion-card-content>
                       <ion-card-title>
-                        Winter
+                        Flower
                         </ion-card-title>
                       <p>
                         $49  <ion-icon name="heart" color="#eca72c"></ion-icon>
                       </p>
+                      <ion-slides class="image-slider"> 
+                        <ion-slide *ngFor="let pic of pics">
+                          <img src="assets/imgs/{{pic}}" class="image">
+                        </ion-slide>
+                      </ion-slides>
                     </ion-card-content>
                   </ion-card>
             </ion-col>
             <ion-col col-6>
                 <ion-card>
-                    <img src="assets/imgs/summer.png"/>
+                    <img src="{{dbPhoto}}"/>
                     <ion-card-content>
                       <ion-card-title>
                         Summer
