--- a/src/pages/explore/explore.html
+++ b/src/pages/explore/explore.html
@@ -73,7 +73,7 @@
         </ion-col>
         <ion-col col-4>
           <ion-card>
-              <img src="assets/imgs/hyd.png"/>
+              <img src="assets/imgs/img4.png"/>
               <ion-card-content>
                 <ion-card-title>
                   hyderabad
