--- a/src/pages/register/register.html
+++ b/src/pages/register/register.html
@@ -26,7 +26,7 @@
         </ion-item>
 
         <ion-item>
-            <ion-label foating>Name</ion-label>
+            <ion-label floating>Name</ion-label>
             <ion-input type="text" [(ngModel)] = "newuser.displayName"></ion-input>
         </ion-item>
   
