change/delete pic func's added. Popover component added for dropdown options on button click

--- a/src/pages/edit-prof/edit-prof.html
+++ b/src/pages/edit-prof/edit-prof.html
@@ -61,5 +61,5 @@
     </ion-list>
 
     <button ion-button (click)="goToProfile();" round>Save</button>
-
+    <button ion-button (click)="cancel();" round>Cancel</button>
 </ion-content>
