--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -27,7 +27,7 @@
         
         <div class="container">
           <img class="border" src = "{{profilepic}}"/>
-          <button ion-button class="buttonPos" icon-only clear small (click)="editPhoto()">
+          <button ion-button class="buttonPos" icon-only clear small (click)="presentPopover($event)">
               <ion-icon name="brush"></ion-icon>
           </button>
         </div>
