fixed bug to show user Display name on User Uploads page header

--- a/src/pages/user-uploads/user-uploads.html
+++ b/src/pages/user-uploads/user-uploads.html
@@ -18,7 +18,7 @@
 
 
     <div class = "box"> 
-        <ion-title>JANE DOE</ion-title> 
+        <ion-title>{{displayName}}</ion-title> 
         <p>Portfolio: Seasons</p>
       </div>
 
