can zoom in on images

--- a/src/pages/user-uploads/user-uploads.html
+++ b/src/pages/user-uploads/user-uploads.html
@@ -63,7 +63,7 @@
                       </p>
                       <ion-slides class="image-slider"> 
                         <ion-slide *ngFor="let pic of pics">
-                          <img src="assets/imgs/{{pic}}" class="image">
+                          <img src="assets/imgs/{{pic}}" class="image" imageViewer>
                         </ion-slide>
                       </ion-slides>
                     </ion-card-content>
