--- a/src/pages/user-uploads/user-uploads.html
+++ b/src/pages/user-uploads/user-uploads.html
@@ -29,11 +29,12 @@
                   <img src = "{{galleryimage}}"/>
                   <ion-card-content>
                     <ion-card-title>
-                      Spring
+                      {{(postData|async)?.title}}
                       </ion-card-title>
                     <p>
-                      $49 <ion-icon name="heart"></ion-icon>
+                      {{(postData|async)?.price}}<ion-icon name="heart"></ion-icon>
                     </p>
+                    {{(postData|async)?.description}}
                   </ion-card-content>
                 </ion-card>
           </ion-col>
@@ -74,11 +75,12 @@
                     <img src="{{dbPhoto}}"/>
                     <ion-card-content>
                       <ion-card-title>
-                        Summer
+                        {{(postData|async)?.title}}
                         </ion-card-title>
                       <p>
-                        $49 <ion-icon name="heart"></ion-icon>
+                        {{(postData|async)?.price}} <ion-icon name="heart"></ion-icon>
                       </p>
+                      {{(postData|async)?.description}}
                     </ion-card-content>
                   </ion-card>
             </ion-col>
