added&modified bunch of functions to add posts

--- a/src/pages/add-art/add-art.html
+++ b/src/pages/add-art/add-art.html
@@ -20,9 +20,6 @@
     <ion-icon name="folder-open" (click) = "openGallery()"></ion-icon> 
 
     <p><img src = "{{photo}}"> </p>
-    <p><img src = "{{photo2}}"> </p>
-   
-
 
     <ion-list>
       
@@ -44,6 +41,6 @@
       
       </ion-list>
 
-      <button ion-button (click)="upload()" round>Submit</button>
+      <button ion-button (click)="updatePosts()" round>Submit</button>
 
 </ion-content>
