--- a/src/pages/edit-prof/edit-prof.html
+++ b/src/pages/edit-prof/edit-prof.html
@@ -24,7 +24,7 @@
      Library
    </button>
 
-   <p><img src = "{{photo}}"> </p> 
+   <p><img src = "{{profilepic}}"> </p> 
     <!--p><img src = "{{photo2}}"> </p--> 
 
     <p style='font-size: 120%'><ion-icon name="create"></ion-icon><i>Display Name </i></p>
