--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -6,7 +6,7 @@
 -->
 
 <ion-header>
-    <ion-navbar>
+    <ion-navbar hideBackButton="true">
         <ion-buttons start>
             <button ion-button icon-only color="dark" menuToggle>
               <ion-icon name="menu"></ion-icon>
