ton of changes and fixes everywhere

--- a/src/pages/edit-prof/edit-prof.html
+++ b/src/pages/edit-prof/edit-prof.html
@@ -29,7 +29,12 @@
 
     <p style='font-size: 120%'><ion-icon name="create"></ion-icon><i>Display Name </i></p>
     <ion-item no-lines>
-      <ion-note>Simply tap on the name on your profile to change it</ion-note>
+      <ion-note>Tap on your name to change it</ion-note>
+    </ion-item>
+
+    <p style='font-size: 125%'><ion-icon name="add"></ion-icon><i>Add Bio</i></p>
+    <ion-item no-lines>
+      <ion-note>Tap on your profile to add or change bio</ion-note>
     </ion-item>
 
     <p style='font-size: 125%'><ion-icon name="person"></ion-icon><i>About</i></p>
