--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,12 +1,12 @@
+<link href='http://fonts.googleapis.com/css?family=Great+Vibes' rel='stylesheet' type='text/css'>
+
 <ion-header>
   <ion-navbar>
-    <ion-title>Feed</ion-title>
+    <ion-title>Atelier</ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-
-    
 
     <ion-searchbar (ionInput)="getItems($event)"></ion-searchbar>
     <ion-list>
