--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -4,31 +4,50 @@
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
+<link href="https://fonts.googleapis.com/css?family=Sacramento" type="text/css" rel="stylesheet">
 
 <ion-header>
 
-    <ion-navbar>
-      <ion-title>Login</ion-title>
+    <ion-navbar transparent>
+      <!--ion-title>Login</ion-title-->
     </ion-navbar>
   
   </ion-header>
   
   
   <ion-content padding>
-  
-    <ion-item>
-      <ion-label floating>Email Address</ion-label>
-      <ion-input type="text" [(ngModel)] = "user.email"></ion-input>
-    </ion-item>
-  
-    <ion-item>
-        <ion-label floating>Password</ion-label>
-        <ion-input type="password" [(ngModel)] = "user.password"></ion-input>
-      </ion-item>
 
+    <div class="align">
+        <h1>Atélier</h1>
+    </div>
 
-      <button ion-button (click)="login(user)">Login</button>
-      <button ion-button color="light" (click)="register()">Register</button>
+      <ion-card>
+          <ion-card-header>
+           Login
+          </ion-card-header>
+          <ion-card-content>
+             <ion-list >
+               <ion-item>  
+                   <ion-input type="email" placeholder="Email" [(ngModel)]="user.email"></ion-input>
+               </ion-item>
+               <ion-item>  
+                   <ion-input type="password" placeholder="Password" [(ngModel)]="user.password"></ion-input>
+               </ion-item>
+              <button ion-button full clear color="light" (click)="login(user)">Login</button>
+              <button ion-button block round outline color="light" (click)="register()">Register</button>
+             </ion-list>    
+          </ion-card-content>
+        </ion-card>
   
   </ion-content>
-  
+
+  <style>
+      h1{
+        font-size: 3em;
+        text-align: center;
+        font-family: Sacramento;
+        font-style: cursive;
+        color: white;
+        text-shadow: 4px 4px 4px rgba(0,0,0,0.1); 
+      }
+  </style>
