--- a/src/pages/notifications/notifications.html
+++ b/src/pages/notifications/notifications.html
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>Notifications Page</ion-title>
+    <ion-title>Notifications</ion-title>
   </ion-navbar>
 
 </ion-header>
