--- a/src/pages/add-art/add-art.html
+++ b/src/pages/add-art/add-art.html
@@ -35,6 +35,11 @@
         </ion-item>
 
         <ion-item>
+          <ion-label inline>Add a Hashtag</ion-label>
+          <ion-input type="text"[(ngModel)]="post.hashid"></ion-input>
+        </ion-item>
+
+        <ion-item>
             <ion-label inline>Price</ion-label>
             <ion-input type="text"[(ngModel)]="post.price"></ion-input>
           </ion-item>
