style changes again

--- a/src/pages/user-uploads/user-uploads.html
+++ b/src/pages/user-uploads/user-uploads.html
@@ -17,6 +17,9 @@
    
 
 
+
+
+
     <div class = "box"> 
         <ion-title>{{displayName}}</ion-title> 
         <p>Portfolio: Seasons</p>
@@ -57,7 +60,7 @@
                 <ion-card>
                     <ion-card-content>
                       <ion-card-title>
-                       <!-- {{title}} -->
+                        {{title}} 
                         </ion-card-title>
                       <p>
                         $49  <ion-icon name="heart" color="#eca72c"></ion-icon>
