modified funcs to get posts as array of objects

--- a/src/pages/add-art/add-art.html
+++ b/src/pages/add-art/add-art.html
@@ -26,7 +26,7 @@
      Choose from Library
    </button>
 
-    <p><img src = "{{photo}}"> </p>
+    <p><img src = "{{postURL}}"> </p>
 
     <ion-list>
       
