user name shows up for post on Home

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -20,7 +20,7 @@
         <div class="b">
           <ion-row>
                 <small class="user-name"><div class="a" style="color: #000; font-weight: bold; margin-top: 5px; margin-left: 1px">
-                  {{allposts[i].title}}<br>
+                  {{allposts[i].username}}<br>
                 </div>
                 </small>
           </ion-row>
