--- a/src/pages/user-uploads/user-uploads.html
+++ b/src/pages/user-uploads/user-uploads.html
@@ -13,15 +13,14 @@
 
 </ion-header>
 
-<ion-content padding>
+<ion-content padding> 
   
 
     <div class = "box"> 
         <ion-title>{{displayName}}</ion-title> 
-        <p>Portfolio: Seasons</p>
       </div>
 
-      <ion-list>
+      <!--<ion-list>
         <ion-item *ngFor="let item of allposts;let i=index" style="width: 100%">
           <div class="b">
             <ion-row>
@@ -48,7 +47,31 @@
               {{allposts[i].description}} </p>
           </ion-row>
         </ion-item>
-      </ion-list>
+      </ion-list>-->
+
+      <ion-grid>
+        <ion-row>
+          <ion-col *ngFor ="let item of allposts; let i=index" col-6 no-padding>
+            <ion-card>
+            <ion-card-header>
+              {{allposts[i].title}}
+            </ion-card-header>
+            <ion-card-content>
+              <img src="{{allposts[i].posturl}}">
+              <ion-row>
+                Price: {{allposts[i].price}}
+              </ion-row>
+              <ion-row>
+                {{allposts[i].description}}
+              </ion-row>
+              <ion-row>
+                {{allposts[i].hashtag}}
+                </ion-row>
+            </ion-card-content>
+          </ion-card>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
 
 </ion-content>
 
